--- a/staticfiles/elden_ring_lore/static/css/style.css
+++ b/staticfiles/elden_ring_lore/static/css/style.css
@@ -48,7 +48,7 @@ a {
     background-size: cover;
     height: 100%;
     width: 100%;
-    color: #fffb00;
+    color: rgb(204, 207, 0);
 
 }
 
@@ -115,7 +115,7 @@ table.display .tableheader tr th {
 
 .btn-outline-warning {
     --bs-btn-color: #fff007e3;
-    --bs-btn-hover-bg: #fff907;
+    --bs-btn-hover-bg: #ffda07e8;
 }
 
 .form-control {
